<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CoronaRadar</string>
    <string name="app_name_pt1" translatable="false">Corona</string>
    <string name="app_name_pt2" translatable="false">Radar</string>
    <string name="radar" translatable="false">Radar</string>
    <string name="my_history">My History</string>
    <string name="stats">Statistics</string>
    <string name="my_account">My Account</string>
    <string name="signin">Sign In</string>
    <string name="updates">Updates</string>
    <string name="coronakit_update_frequency">CoronaKit update frequency</string>
    <string name="coronakit_update_wifi_only">Update CoronaKit on Wi-Fi only</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="google_signin">Sign In with Google</string>
    <string name="facebook_signin">Continue with Facebook</string>
    <string name="password">Password</string>
    <string name="password_icon" translatable="false">Password icon</string>
    <string name="email">Email</string>
    <string name="email_icon" translatable="false">Email icon</string>
    <string name="or">or</string>
    <string name="forgot_your_password_pt1">Forgot your password?</string>
    <string name="forgot_your_password_pt2">Reset here</string>
    <string name="register_pt1">Don\'t have an account yet?</string>
    <string name="signup">Sign Up</string>
    <string name="signin_header">Sign In to See More</string>
    <string name="app_icon" translatable="false">CoronaRadar icon</string>
    <string name="password_confirm">Confirm password</string>
    <string name="login_pt1">Already have an account?</string>
    <string name="signup_header">Sign Up to CoronaRadar</string>
    <string name="display_name">Display name</string>
    <string name="display_name_icon" translatable="false">Display name icon</string>
    <string name="signout">Sign Out</string>
    <string name="avatar_image" translatable="false">Avatar image</string>
    <string name="save_user_info">Save changes</string>
    <string name="account_header">Your profile</string>
    <string name="edit_display_name">Edit display name</string>
    <string name="edit_password">Edit password</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="password_new_confirm">Confirm new password</string>
    <string name="password_new">New password</string>
    <string name="password_reset">Password reset</string>
    <string name="send">Send</string>
    <string name="password_reset_email_message">Enter the email address associated with your account and we\'ll send you a link to reset your password</string>
    <string name="password_reset_email_complete_message">Password reset email sent. Check your inbox</string>
    <string name="login_failure">Login failure</string>
    <string name="login_failure_bad_credentials_message">Sign-in failed. Check your credentials and try again</string>
    <string name="register_success">Registration success</string>
    <string name="register_success_message">You\'ve been successfully registered. Check your inbox for verification email</string>
    <string name="register_failure_email_exists_message">Account with that email already exists</string>
    <string name="register_failure">Registration failure</string>
    <string name="general_failure_message">Request processing failed. Try again later</string>
    <string name="verification_email_message">Account is not verified. Verify first or request new verification email</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="verification_email_success_message">Verification email resent. Check your inbox</string>
    <string name="google_web_client_id" translatable="false">615431991272-ttqadtd5dvghndcfeborsqoj6bul857m.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">297438641790189</string>
    <string name="facebook_client_token" translatable="false">ad7a016055b2d31e9faa6a0df28e0115</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb297438641790189</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="empty_not_allowed">Cannot be empty</string>
    <string name="min_six_chars_allowed">Must be at least 6 characters</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="login_failure_other_provider_message">Account is already registered via another provider</string>
    <string name="update">Update</string>
    <string name="password_reset_message">Set new password</string>
    <string name="password_reset_complete_message">Password updated. You can sign-in now</string>
    <string name="email_not_valid">Must be a valid email address</string>
    <string name="signout_message">Are you sure you want to sign out?</string>
    <string name="signin_link">Sign in</string>
    <string name="language">Language</string>
    <string name="region" translatable="false">Region</string>
    <string name="auth_code_failure_invalid_message">Action code is invalid, expired or has already been used</string>
    <string name="reauthentication_required">For security reasons, you are required to re-login before updating your profile. Do you want to sign out now?</string>
    <string name="update_profile_success">Update profile success</string>
    <string name="update_profile_success_message">Your profile has been updated successfully</string>
    <string name="set_avatar">Set avatar</string>
    <string name="set_avatar_size_failure">File size too large, max 2 MB allowed</string>
    <string name="record_voice">Record voice</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_required_message">Application cannot work without necessary permissions</string>
    <string name="permissions_open_settings">Settings</string>
    <string name="tip">Tip</string>
    <string name="tip_card_message_1">Click button below and record your cough sound</string>
    <string name="tip_card_message_2">Maximum record length is 20 seconds</string>
    <string name="coronakit_last_update_key" translatable="false">coronakit_last_update_key</string>
    <string name="model_update_message">Updating CoronaKit metadata…</string>
    <string name="coronakit_update_frequency_key" translatable="false">coronakit_update_frequency_key</string>
    <string name="language_key" translatable="false">language_key</string>
    <string name="classification_result_icon">Classification result icon</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="your_result_message">Your COVID-19 test result</string>
    <string name="medical_card_icon">Medical card icon</string>
    <string name="probability">Probability</string>
    <string name="percent" translatable="false">%d%%</string>
    <string name="probability_percent">Probability: %d%%</string>
    <string name="classification_message">Analyzing data…</string>
    <string name="not_enough_space">Not enough disk space</string>
    <string name="user_data_save_failure_message">Failed to save some of user data</string>
    <string name="fetch_data_failure_message">Couldn\'t fetch some data</string>
    <string name="retry">Retry</string>
    <string name="start">Start</string>
    <string name="survey_intro_title">Survey on COVID-19</string>
    <string name="survey_intro_text">We would appreciate you could take a few minutes to fill out our anonymous survey</string>
    <string name="age_question_title">How old are you?</string>
    <string name="age_question_message">Choose your age</string>
    <string name="gender_question_title">What is your gender?</string>
    <string name="gender_question_message">Choose your gender</string>
    <string name="continent_question_title">What continent do you live in?</string>
    <string name="continent_question_message">Type your continent</string>
    <string name="illnesses_question_title">Do you have any of the following conditions?</string>
    <string name="cancer">Cancer</string>
    <string name="chronic_lung_disease">Chronic lung disease</string>
    <string name="chronic_liver_disease">Chronic liver disease</string>
    <string name="diabetes_mellitus">Diabetes mellitus</string>
    <string name="heart_conditions">Heart conditions</string>
    <string name="asthma">Asthma</string>
    <string name="hypertension">Hypertension</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel" tools:keep="@string/cancel">Cancel</string>
    <string name="survey_cancel_title">Cancel survey</string>
    <string name="survey_cancel_message">Are you sure you want to cancel the survey?</string>
    <string name="survey_complete_title">Survey completed</string>
    <string name="survey_complete_message">Thank you for your contribution</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="success_anim_path" translatable="false">animation-success-colorful.json</string>
    <string name="wellbeing_question_title">How do you feel?</string>
    <string name="wellbeing_question_message">Rate your wellbeing on a scale from 1 to 10</string>
    <string name="fever">Fever</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="breath_shortness">Shortness of breath</string>
    <string name="tiredness">Tiredness</string>
    <string name="smell_loss">Loss of smell</string>
    <string name="rash">Rash</string>
    <string name="symptoms_question_title">Do you have any of these symptoms?</string>
    <string name="choose_all_applicable_message">Choose all applicable</string>
    <string name="yes_no_message">Choose yes or no</string>
    <string name="quarantine_question_title">Are you in quarantine?</string>
    <string name="close_contact_question_title">Did you have a close contact of a person diagnosed with COVID-19 recently?</string>
    <string name="travel_abroad_question_title">Did you travel abroad recently?</string>
    <string name="smoker_question_title">Do you have a smoking habit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip">Skip</string>
    <string name="date">Date</string>
    <string name="date_icon">Date icon</string>
    <string name="result">Result</string>
    <string name="result_icon">Result icon</string>
    <string name="probability_icon">Probability icon</string>
    <string name="age">Age</string>
    <string name="age_icon">Age icon</string>
    <string name="gender_icon">Gender icon</string>
    <string name="gender">Gender</string>
    <string name="continent_icon">Continent icon</string>
    <string name="continent">Continent</string>
    <string name="illnesses">Illnesses</string>
    <string name="symptoms">Symptoms</string>
    <string name="survey_details_info_icon">Survey details info icon</string>
    <string name="show">Show</string>
    <string name="in_quarantine">In quarantine</string>
    <string name="close_contact">Had close contact</string>
    <string name="travel_abroad">Travelled abroad</string>
    <string name="smoker">Smoker</string>
    <string name="self_wellbeing_rate">Self wellbeing rate</string>
    <string name="survey_result">Survey result</string>
    <string name="name_question_title">What\'s your name?</string>
    <string name="name_question_message">Type your name</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="gender_age" tools:ignore="PluralsCandidate">%1$s, %2$d yrs old</string>
    <string name="covid_test_result_question_title">What was your COVID-19 test result?</string>
    <string name="covid_test_result_question_message">Choose your test result</string>
</resources>