<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/region">

        <ListPreference
            app:key="language_key"
            app:title="@string/language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="default"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/updates">

        <ListPreference
            app:key="coronakit_update_frequency_key"
            app:title="@string/coronakit_update_frequency"
            app:entries="@array/coronakit_update_frequency_entries"
            app:entryValues="@array/coronakit_update_frequency_values"
            app:defaultValue="24"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="coronakit_update_wifi_only_key"
            app:title="@string/coronakit_update_wifi_only"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>