<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/nav_radar">

    <fragment
        android:id="@+id/nav_radar"
        android:name="pl.piasta.coronaradar.ui.radar.view.RadarFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_radar" />

    <fragment
        android:id="@+id/nav_history"
        android:name="pl.piasta.coronaradar.ui.history.view.HistoryFragment"
        android:label="@string/my_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="pl.piasta.coronaradar.ui.stats.view.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />

    <activity
        android:id="@+id/nav_account"
        android:name="pl.piasta.coronaradar.ui.user.view.UserActivity"
        android:label="@string/account"
        tools:layout="@layout/activity_user" />

    <activity
        android:id="@+id/nav_login"
        android:name="pl.piasta.coronaradar.ui.user.view.UserActivity"
        android:label="@string/signin"
        tools:layout="@layout/activity_user" />

    <activity
        android:id="@+id/nav_settings"
        android:name="pl.piasta.coronaradar.ui.settings.view.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_user" />
</navigation>