<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/ic_baseline_radar_24"
            android:title="@string/radar" />
    </group>

    <group
        android:id="@+id/menu_group_logged_in"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/my_history" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_baseline_query_stats_24"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_account" />
    </group>

    <group
        android:id="@+id/menu_group_not_logged_in"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/signin" />
    </group>

    <group
        android:id="@+id/menu_group_extra"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>