<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.piasta.coronaradar.ui.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/account_fragment_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_header"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/account_fragment_header_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RelativeLayout
            android:id="@+id/account_fragment_header_content"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:layout_constraintTop_toBottomOf="@+id/account_fragment_header_title"
            app:layout_constraintBottom_toTopOf="@+id/account_fragment_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/avatar_card"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center_horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="75dp"
                    app:cardElevation="@dimen/elevation_image">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/avatar_image"
                        app:srcCompat="@drawable/ic_avatar_140"
                        tools:ignore="ImageContrastCheck" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/upload_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/avatar_card"
                android:layout_marginTop="-48dp"
                android:contentDescription="@string/upload_avatar"
                app:fabCustomSize="40dp"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24"
                app:tint="@color/white"
                app:elevation="0dp"
                tools:ignore="ImageContrastCheck" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/account_fragment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_fragment_header_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/display_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:layout_marginBottom="8dp"
                app:startIconDrawable="@drawable/ic_baseline_face_24"
                app:startIconContentDescription="@string/display_name_icon"
                app:endIconDrawable="@{viewModel.displayNameEnabled ? @drawable/ic_baseline_edit_off_24 : @drawable/ic_baseline_edit_24}"
                app:endIconContentDescription="@string/edit"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Caption">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/display_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:enabled="@{viewModel.displayNameEnabled}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="8dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconContentDescription="@string/email_icon"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="8dp"
                app:placeholderText="@string/password_new"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconContentDescription="@string/password_icon"
                app:endIconDrawable="@{viewModel.passwordEnabled ? @drawable/ic_baseline_edit_off_24 : @drawable/ic_baseline_edit_24}"
                app:endIconContentDescription="@string/edit"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:enabled="@{viewModel.passwordEnabled}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/password_confirm_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:layout_marginBottom="8dp"
                app:placeholderText="@string/password_new_confirm"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconContentDescription="@string/password_icon"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirm_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:enabled="@{viewModel.passwordEnabled}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_user_info_button"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:backgroundTint="@color/picton_blue_600"
                android:text="@string/save_user_info"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:icon="@drawable/ic_baseline_task_24"
                app:iconGravity="textStart"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signout_button"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:backgroundTint="@color/carrot_orange_600"
                android:text="@string/signout"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:icon="@drawable/ic_baseline_logout_24"
                app:iconGravity="textStart"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>